--- a/_source/_layouts/video.html
+++ b/_source/_layouts/video.html
@@ -11,35 +11,34 @@ single: true
     <div class="wrapper">
       <h1 class="entry-title">{{ page.title | widont }}</h1>
       <span class="entry-category">{{ page.category }}</span>
-      <span class="ss-icon ss-navigatedown"></span>
+      <a class="scroll-target" href="#top"><span class="ss-icon ss-navigatedown"></span></a>
     </div>
   </header>
 
-  <div class="video-wrapper">
-    <div class="embed-container">
-      <iframe src="http://youtube.com/embed/{{ page.ytid }}?vq=hd720&amp;showinfo=0&amp;controls=0" frameborder="0" allowfullscreen></iframe>
+  <div id="top" class="entry-content">
+    <div class="video-wrapper">
+      <div class="embed-container">
+        <iframe src="http://youtube.com/embed/{{ page.ytid }}?vq=hd720&amp;showinfo=0&amp;controls=0" frameborder="0" allowfullscreen></iframe>
+      </div>
     </div>
-  </div>
-  <div class="entry-metadata js-yt-metadata">
-    <div class="entry-meta entry-views">
-      <span class="ss-icon ss-tv"></span>
-      <span class="entry-meta-detail"><span class="js-yt-views"></span> <span class="metadata-prefix">Views</span></span>
+    <div class="entry-metadata js-yt-metadata">
+      <div class="entry-meta entry-views">
+        <span class="ss-icon ss-tv"></span>
+        <span class="entry-meta-detail"><span class="js-yt-views"></span> <span class="metadata-prefix">Views</span></span>
+      </div>
+      {% if page.series and page.episode %}
+      <div class="entry-meta entry-episode">
+        <span class="ss-icon ss-clapboard"></span>
+        <span class="entry-meta-detail"><span class="metadata-prefix">{{ page.series }}</span> #{{ page.episode }}</span>
+      </div>
+      {% endif %}
+      <div class="entry-meta entry-likes">
+        <span class="ss-icon ss-heart"></span>
+        <span class="entry-meta-detail"><span class="js-yt-comments"></span> <span class="metadata-prefix">Likes</span></span>
+      </div>
     </div>
-    {% if page.series and page.episode %}
-    <div class="entry-meta entry-episode">
-      <span class="ss-icon ss-clapboard"></span>
-      <span class="entry-meta-detail"><span class="metadata-prefix">{{ page.series }}</span> #{{ page.episode }}</span>
-    </div>
-    {% endif %}
-    <div class="entry-meta entry-likes">
-      <span class="ss-icon ss-heart"></span>
-      <span class="entry-meta-detail"><span class="js-yt-comments"></span> <span class="metadata-prefix">Likes</span></span>
-    </div>
-  </div>
 
-  <hr>
-
-  <div class="entry-content">
+    <hr>
     {{ content | widont }}
   </div>
 
