--- a/_source/_includes/head.html
+++ b/_source/_includes/head.html
@@ -18,4 +18,5 @@
   <link href="{{ root_url }}/stylesheets/screen.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
   <script src="{{ root_url }}/javascripts/jquery.fittext.js"></script>
+  <script src="{{ root_url }}/javascripts/jquery.smoothscroll.min.js"></script>
 </head>
