--- a/sass/sections/_home.scss
+++ b/sass/sections/_home.scss
@@ -24,16 +24,16 @@
   background-position: center center;
   background-size: 200px;
 
-  // &:before {
-  //   @include position(absolute, 0 0 0 0);
-  //   top: calc(50% - 60px); left: calc(50% - 60px);
-  //   content: '';
-  //   width: 120px; height: 120px;
+  &:before {
+    @include position(absolute, 0 0 0 0);
+    top: calc(50% - 60px); left: calc(50% - 60px);
+    content: '';
+    width: 120px; height: 120px;
 
-  //   background: #161B21;
-  //   border-radius: 50%;
-  //   box-shadow: 0 1px 0 #272E37;
-  // }
+    background: #161B21;
+    border-radius: 50%;
+    box-shadow: 0 1px 0 #272E37;
+  }
   .site-logo {
     @include position(absolute, 0px 0px 0px 0px);
     height: auto;
