--- a/_source/_includes/post/juke.html
+++ b/_source/_includes/post/juke.html
@@ -1,6 +1,23 @@
-{% if page.previous.url %}
-<a class="left" href="{{ page.previous.url }}" title="Previously: {{ page.previous.title }}">{{ page.previous.title }}</a>
+{% if page.previous.url or page.next.url %}
+<div class="jukes">
+  {% if page.previous.url %}
+  <div class="juke juke-previous">
+    <a class="left" href="{{ page.previous.url }}" title="Previous: {{ page.previous.title }}">
+    <span class="ss-icon ss-navigateleft"></span>
+    <h2>{{ page.previous.title }}</h2>
+    <span class="next-up">Previously, a {{ page.previous.category }}.</span>
+    </a>
+  </div>
+  {% endif %}
+  {% if page.next.url %}
+  <div class="juke juke-next">
+    <a class="right" href="{{ page.next.url }}" title="Next: {{ page.next.title }}">
+      <span class="ss-icon ss-navigateright"></span>
+      <h2>{{ page.next.title }}</h2>
+      <span class="next-up">Next Up, {{ page.next.category }}.</span>
+    </a>
+  </div>
+  {% endif %}
+</div>
 {% endif %}
-{% if page.next.url %}
-<a class="right" href="{{ page.next.url }}" title="Next: {{ page.next.title }}">{{ page.next.title }}</a>
-{% endif %}
+</div>
