--- a/_source/_layouts/default.html
+++ b/_source/_layouts/default.html
@@ -8,17 +8,8 @@
       {{ content }}
     </div>
     {% include footer.html %}
-    {% if page.next.url %}
-    <div class="juke juke-next">
-      <a class="right" href="{{ page.next.url }}" title="Next: {{ page.next.title }}">
-        <span class="next-up">Next Up, {{ page.next.category }}.</span>
-        <h2>{{ page.next.title }}</h2>
-        <span class="ss-icon ss-navigatedown"></span>
-      </a>
-    </div>
-    {% endif %}
+    {% include juke.html %}
   </div>
-
   <script src="/javascripts/application.js"></script>
   <script src="/javascripts/twitch.js"></script>
   <script src="/javascripts/youtube.js"></script>
