--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -47,15 +47,20 @@
   text-align: center;
 }
 
+.jukes {
+  display: flex;
+  margin-top: 2.369rem;
+  border-top: 1px solid #EBEFF5;
+}
+.juke {
+  flex: 1;
+}
 .juke a {
   display: flex;
   flex-direction: column;
-  margin-top: 2.369rem;
-  padding: 4.209rem 0;
-  width: 100%;
+  padding: 3.157rem 0;
 
   background-color: #FFF;
-  border-top: 1px solid #EBEFF5;
   text-align: center;
   text-decoration: none;
   transition: all 250ms ease;
@@ -63,8 +68,9 @@
   &:hover { background-color: #F9FAFC; }
   h2 {
     font-family: $font-family-tertiary;
-    font-size: ms(4);
+    font-size: ms(3);
     margin: 0;
+    margin-top: 1rem;
   }
   .next-up {
     color: #A1ABB6;
