Backtrack to mobile-first. Remove all the widths.

--- a/sass/sections/_home.scss
+++ b/sass/sections/_home.scss
@@ -60,7 +60,7 @@
 }
 .hero {
   margin: 0 auto;
-  width: ms(13);
+  ;
   text-align: center;
 
   p {
@@ -113,7 +113,7 @@
 
 .home-section {
   margin: 1.777rem auto;
-  width: ms(13);
+  ;
 
   .ss-icon { font-size: 36px; }
 }
