--- a/_source/_includes/header.html
+++ b/_source/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <a class="toggle" href="#left"><span class="ss-icon ss-menu"></span></a>
   <div class="site-logo {% if page.category %}sans-star{% endif %}"></div>
-  <a href="{{ root_path }}" class="site-logotype">Avalonstar</a>
+  <a class="site-logotype desktop-only" href="{{ root_path }}">Avalonstar</a>
   <div class="icon-contain">
     {% if page.category == "prose" %}<span class="ss-icon ss-notebook"></span>{% endif %}
     {% if page.category == "video" %}<span class="ss-icon ss-clapboard"></span>{% endif %}
