--- a/sass/components/_scaffolding.scss
+++ b/sass/components/_scaffolding.scss
@@ -25,6 +25,5 @@ hr {
   border-top: 1px solid #DFE3E8;
 }
 
-.mobile-only { display: none; }
-.desktop-only { display: none; }
+.mobile-only { display: none !important; }
 .scroll-target { text-decoration: none; }
