Moar mobile-first changes.

--- a/_source/_includes/navigation.html
+++ b/_source/_includes/navigation.html
@@ -1,6 +1,6 @@
 <nav role="navigation">
   <ul class="main-navigation">
-    <li class="section-live">
+    <li class="section-live desktop-only">
       <a href="/live/">
         <span class="ss-icon ss-video"></span>
         <strong>Live</strong> <span>Making a fool of myself. <i>(And it's all live.)</i></span>
