--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -68,8 +68,8 @@
   h2 {
     font-family: $font-family-tertiary;
     font-size: ms(3);
-    margin: 0;
-    margin-top: 1rem;
+    margin: 1rem 0 0.533rem;
+    line-height: 1;
   }
   .next-up {
     color: #A1ABB6;
