--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,19 +1,24 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    
-    <!-- Always force latest IE rendering engine or request Chrome Frame -->
-    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    
-    <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "The Middleman" %></title>
-    
-    <%= stylesheet_link_tag "normalize", "all" %>
-    <%= javascript_include_tag  "all" %>
-  </head>
-  
-  <body class="<%= page_classes %>">
-    <%= yield %>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+
+  <title><% if current_page.data.title %><%= current_page.data.title %> &middot; <% end %><%= data.site.name %></title>
+
+  <meta name="viewport" content="width=device-width">
+  <meta name="author" content="<%= data.site.creator %>">
+  <meta name="copyright" content="<%= data.site.creator %>">
+  <meta name="description" content="<%= data.site.description %>">
+  <meta name="ICBM" content="34.023411,-118.403607">
+
+  <link rel="stylesheet" href="//cloud.typography.com/7547452/674522/css/fonts.css">
+  <%= stylesheet_link_tag "normalize", "screen" %>
+  <%= javascript_include_tag  "all" %>
+</head>
+<body class="<%= page_classes %>">
+  <main id="main" role="main">
+  <%= yield %>
+  </main>
+</body>
 </html>
