--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -18,6 +18,7 @@
 </head>
 <body class="<%= page_classes %>">
   <main id="main" role="main">
+  <%= partial "partials/header" %>
   <%= yield %>
   </main>
 </body>
