--- a/source/partials/_navigation.erb
+++ b/source/partials/_navigation.erb
@@ -1,10 +1,10 @@
 <nav role="navigation">
   <ul class="main-navigation">
     <li class="section-live desktop-only">
-      <a href="/live/">
+      <% link_to "/live/" do %>
         <span class="ss-icon ss-video"></span>
         <strong>Live</strong> <span>Making a fool of myself. <i>(And it's all live.)</i></span>
-      </a>
+      <% end %>
     </li>
     <li class="section-journal">
       <a href="/journal/">
