--- a/source/assets/stylesheets/components/_variables.scss
+++ b/source/assets/stylesheets/components/_variables.scss
@@ -1,5 +1,4 @@
-$base-size: 14px !default;
-$ratio: fourth();
+$base-size: 16px !default;
 
 // Let's start out with some variables. Here, we determine what kind of CSS
 // we want Compass to write, because we don't want EVERYTHING.
@@ -25,8 +24,8 @@ $font-family-tertiary: 'Tungsten A', 'Tungsten B';
 $font-family-logotype: 'Idlewild SSm A', 'Idlewild SSm B';
 
 $font-size-base: $base-size;
-$font-size-large: ms(1) !default;
-$font-size-small: ms(-1) !default;
+$font-size-large: 1.333rem !default;
+$font-size-small: 0.75rem !default;
 
 $line-height-base: 1.5 !default;
 $line-height-computed: floor($font-size-base * $line-height-base) !default;
