--- a/source/partials/_juke.erb
+++ b/source/partials/_juke.erb
@@ -5,16 +5,16 @@
     <a class="left" href="<%= current_page.previous_article.url %>" title="Previous: <%= current_page.previous_article.title %>">
       <span class="ss-icon ss-navigateleft"></span>
       <h2><%= current_page.previous_article.title %></h2>
-      <span class="next-up">Previously, a <%= current_page.previous_article.data.category %>.</span>
+      <span class="next-up">Previously, <%= current_page.previous_article.data.category %>.</span>
     </a>
   </div>
   <% end %>
   <% if current_page.next_article %>
   <div class="juke juke-next">
     <a class="right" href="<%= current_page.next_article.url %>" title="Previous: <%= current_page.next_article.title %>">
-      <span class="ss-icon ss-navigateleft"></span>
+      <span class="ss-icon ss-navigateright"></span>
       <h2><%= current_page.next_article.title %></h2>
-      <span class="next-up">Previously, a <%= current_page.next_article.data.category %>.</span>
+      <span class="next-up">Next up, <%= current_page.next_article.data.category %>.</span>
     </a>
   </div>
   <% end %>
