--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,6 +14,7 @@
 
   <link rel="stylesheet" href="//cloud.typography.com/7547452/674522/css/fonts.css">
   <%= stylesheet_link_tag "normalize", "screen" %>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <%= javascript_include_tag  "all" %>
 </head>
 <body class="<%= page_classes %>">
