--- a/source/partials/_header.erb
+++ b/source/partials/_header.erb
@@ -1,3 +1,4 @@
+<%= partial "partials/navigation" %>
 <header class="header">
   <a class="toggle" href="#left"><span class="ss-icon ss-menu"></span></a>
   <div class="site-logo <%= 'sans-star' if current_page.data.category %>"></div>
