--- a/source/assets/stylesheets/partials/_header.scss
+++ b/source/assets/stylesheets/partials/_header.scss
@@ -46,7 +46,7 @@
 }
 
 [role="navigation"] {
-  margin-top: calc(-146px - 1.777rem);
+  margin-top: calc(-274px - 1.777rem);
   background-color: #272E37;
   padding-bottom: 1.777rem;
 
@@ -74,6 +74,7 @@
 
 .main-navigation {
   display: flex;
+  flex-direction: column;
   margin: 0 auto;
   padding: 0;
   list-style: none;
