--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -18,9 +18,13 @@
   <%= javascript_include_tag  "all" %>
 </head>
 <body class="<%= page_classes %>">
+<% if current_page.url != "/" %>
   <main id="main" role="main">
-  <%= partial "partials/header" %>
-  <%= yield %>
+    <%= partial "partials/header" %>
+    <%= yield %>
   </main>
+<% else %>
+  <%= yield %>
+<% end %>
 </body>
 </html>
