--- a/source/layouts/prose.erb
+++ b/source/layouts/prose.erb
@@ -13,7 +13,7 @@
   </div>
   <footer class="entry-footer metadata-display">
     <div class="entry-dataitem metadata-item">
-      <span class="ss-icon ss-calendar"></span>
+      <span class="ss-icon">&#x1F4C5;</span>
       <time class="entry-dataitem-detail">
         <span class="metadata-prefix">Published</span> <%= current_page.date.strftime("%B %-d, %Y") %>
       </time>
