--- a/source/partials/_header.erb
+++ b/source/partials/_header.erb
@@ -4,8 +4,7 @@
   <div class="site-logo <%= 'sans-star' if current_page.data.category %>"></div>
   <a class="site-logotype desktop-only" href="/">Avalonstar</a>
   <div class="icon-contain">
-  <span class="ss-icon ss-notebook"></span>
-    <% if current_page.data.category == "prose" %><span class="ss-icon ss-notebook"></span><% end %>
-    <% if current_page.data.category == "video" %><span class="ss-icon ss-clapboard"></span><% end %>
+    <% if current_page.data.category == "prose" %><span class="ss-icon">&#x1F4D3;</span><% end %>
+    <% if current_page.data.category == "video" %><span class="ss-icon">&#x1F3AC;</span><% end %>
   </div>
 </header>
