--- a/source/partials/_navigation.erb
+++ b/source/partials/_navigation.erb
@@ -2,19 +2,19 @@
   <ul class="main-navigation">
     <li class="section-live desktop-only">
       <% link_to "/live/" do %>
-        <span class="ss-icon ss-video"></span>
+        <span class="ss-icon">&#x1F4F9;</span>
         <strong>Live</strong> <span>Making a fool of myself. <i>(And it's all live.)</i></span>
       <% end %>
     </li>
     <li class="section-journal">
       <a href="/journal/">
-        <span class="ss-icon ss-notebook"></span>
+        <span class="ss-icon">&#x1F4D3;</span>
         <strong>Journal</strong> <span>Today's fluff. <i>(Yesteryear's... fluff.)</i></span>
       </a>
     </li>
     <li class="section-about">
       <a href="/about/">
-        <span class="ss-icon ss-flash"></span>
+        <span class="ss-icon">&#x2301;</span>
         <strong>About</strong> <span>Written in the stars. <i>(It's not that interesting.)</i></span>
       </a>
     </li>
