--- a/source/assets/stylesheets/sections/_home.scss
+++ b/source/assets/stylesheets/sections/_home.scss
@@ -1,162 +1,145 @@
-// .introductory-tile {
-//   @include position(relative);
-//   display: flex;
-//   flex-direction: column;
-//   width: 100%; height: 100%;
+.introductory-tile {
+  @include position(relative);
+  display: flex;
+  flex-direction: column;
+  background: linear-gradient(#272E37, #161B21);
 
-//   background: linear-gradient(#272E37, #161B21);
+  .ss-icon {
+    display: block;
+    color: #FFF;
+    font-size: 32px;
+  }
+  .tile { flex: 1; }
+}
+.primary-introduction {
+  @include position(relative);
+  background-image: url('../images/phoenix.png');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 200px;
+  min-height: 17.713rem;
 
-//   .tile {
-//     flex: 1;
-//   }
-//   .ss-icon {
-//     display: block;
-//     color: #FFF;
-//     font-size: 32px;
-//   }
-// }
+  &:before {
+    @include position(absolute, 0 0 0 0);
+    top: calc(50% - 60px); left: calc(50% - 60px);
+    content: '';
+    width: 120px; height: 120px;
 
+    background: #161B21;
+    border-radius: 50%;
+    box-shadow: 0 1px 0 #272E37;
+  }
+  .site-logo {
+    @include position(absolute, 0px 0px 0px 0px);
+    height: auto;
+    background-position: center center;
+    background-size: 200px;
+  }
+}
+.secondary-introduction {
+  display: flex;
+  flex-direction: column;
 
-// .primary-introduction {
-//   @include position(relative);
-//   background-image: url('../images/phoenix.png');
-//   background-repeat: no-repeat;
-//   background-position: center center;
-//   background-size: 200px;
+  .site-established {
+    display: block;
+    color: #646D77;
+    font-family: $font-family-secondary;
+    font-size: 0.563rem;
+    font-weight: 700;
+  }
+  .site-logotype {
+    display: block;
+    margin-bottom: 0;
+    margin-top: 0.422rem;
+    color: #FFF;
+    font-size: 2.369rem;
+    letter-spacing: -2px;
+    line-height: 1;
+  }
+}
 
-//   &:before {
-//     @include position(absolute, 0 0 0 0);
-//     top: calc(50% - 60px); left: calc(50% - 60px);
-//     content: '';
-//     width: 120px; height: 120px;
+.hero {
+  margin: 0 auto;
+  text-align: center;
+}
+.hero-posts {
+  align-items: flex-end;
+  flex-direction: column;
+  display: flex;
+  flex: 1;
+  margin: 0 auto;
+  padding: 0 1rem;
+  width: 100%;
 
-//     background: #161B21;
-//     border-radius: 50%;
-//     box-shadow: 0 1px 0 #272E37;
-//   }
-//   .site-logo {
-//     @include position(absolute, 0px 0px 0px 0px);
-//     height: auto;
-//     background-position: center center;
-//     background-size: 200px;
-//   }
-// }
-// .secondary-introduction {
-//   display: flex;
-//   flex-direction: column;
+  .ss-icon { color: #454d57; }
+  .recent-title { font-weight: 300; }
+}
+.recent-item {
+  flex: 1;
+  margin: 0 1rem;
+  padding: 1.777rem;
+  text-align: center;
+}
+.recent-title {
+  font-family: $font-family-tertiary;
+  margin: 0;
+  line-height: 1;
 
-//   .site-established {
-//     display: block;
-//     color: #646D77;
-//     font-family: $font-family-secondary;
-//     font-size: ms(-2);
-//     font-weight: 700;
-//   }
-//   .site-logotype {
-//     color: #FFF;
-//     letter-spacing: -2px;
-//     font-size: 32px;
-//   }
-// }
-// .hero {
-//   margin: 0 auto;
-//   ;
-//   text-align: center;
+  a {
+    color: #FFF;
+    text-decoration: none;
+  }
+}
+.recent-published {
+  font-family: $font-family-secondary;
+  font-size: 0.75rem;
+}
 
-//   p {
-//     color: #454D57;
-//     font-family: $font-family-secondary;
-//     font-size: ms(-1);
-//     line-height: 1.3;
-//     text-align: justify;
-//     margin: 0;
-//     font-weight: 700;
-//     text-shadow: 0 1px 2px rgba(0,0,0,0.5);
-//     padding: 1rem;
-//     box-shadow: inset 0 0 0 1px #272E37;
-//     border-radius: 4px;
-//     background: #161B21;
+.home-section {
+  margin: 1.777rem auto;
 
-//   }
-// }
+  .ss-icon { font-size: 36px; }
+}
+.home-section-header {
+  padding: 1.7777rem 0;
+  text-align: center;
 
-// .hero-posts {
-//   align-items: flex-end;
-//   display: flex;
-//   flex: 1;
-//   margin: 0 auto;
-//   padding: 0 1rem;
-//   width: 100%;
+  .ss-icon { font-size: 42px; }
+}
 
-//   .ss-icon { color: #454d57; }
-// }
-// .recent-item {
-//   flex: 1;
-//   margin: 0 1rem;
-//   padding-bottom: 1.777rem;
-//   border-bottom: 1px solid #272E37;
-//   text-align: center;
-// }
-// .recent-title {
-//   font-family: $font-family-tertiary;
-//   margin: 0;
+//
+.recent-posts {
+  a {
+    color: #333;
+    text-decoration: none;
+  }
+  .recent-list {
+    margin: 0;
+    margin-left: 1.333rem;
+    margin-right: 1.333rem;
+    padding: 0;
+    list-style: none;
+  }
+  .recent-list-item {
+    align-items: flex-start;
+    display: flex;
+    padding-bottom: 1.777rem;
 
-//   a {
-//     color: #FFF;
-//     text-decoration: none;
-//   }
-// }
-// .recent-published {
-//   font-family: $font-family-secondary;
-//   font-size: ms(-1);
-// }
+    &:last-child { padding-bottom: 0; }
+    div { flex: 1; }
+    .ss-icon { color: #CBD1D8; }
+  }
+  .recent-title {
+    margin: 0;
+    font-family: $font-family-primary;
+    font-size: 1.777rem;
+    letter-spacing: -1px;
+    line-height: 1;
 
-// .home-section {
-//   margin: 1.777rem auto;
-//   ;
-
-//   .ss-icon { font-size: 36px; }
-// }
-// .home-section-header {
-//   padding: 1.7777rem 0;
-//   text-align: center;
-
-//   .ss-icon { font-size: 42px; }
-// }
-
-// //
-// .recent-posts {
-//   a {
-//     color: #333;
-//     text-decoration: none;
-//   }
-//   ul {
-//     list-style: none;
-//     margin: 0;
-//     padding: 0;
-//   }
-//   li {
-//     padding-bottom: 1.777rem;
-//     &:last-child { padding-bottom: 0; }
-//   }
-//   .recent-list-item {
-//     align-items: flex-start;
-//     display: flex;
-
-//     div { flex: 1; }
-//     .ss-icon { color: #CBD1D8; }
-//   }
-//   .recent-title {
-//     margin: 0;
-//     font-family: $font-family-primary;
-//     font-size: ms(2);
-//     letter-spacing: -1px;
-//     line-height: 1;
-
-//     a { color: #454D57; }
-//   }
-//   .recent-published { color: #A1ABB6; }
-// }
+    a { color: #454D57; }
+  }
+  .recent-published { color: #A1ABB6; }
+}
 
 // //
 // .home-videos {
@@ -220,17 +203,17 @@
 //   margin: 0;
 // }
 
-// // Landing page-specific overrides.
-// .home {
-//   [role="navigation"] {
-//     margin-top: 0;
-//     padding: 1.777rem 0;
-//   }
-//   .main-navigation { width: auto; }
-//   .ss-navigatedown {
-//     height: 40px;
-//     margin: 1.777rem 0;
-//     font-size: 32px;
-//     text-align: center;
-//   }
-// }
+// Landing page-specific overrides.
+.index {
+  [role="navigation"] {
+    margin-top: 0;
+    padding: 1.777rem 0;
+  }
+  .main-navigation { width: auto; }
+  .ss-navigatedown {
+    height: 40px;
+    margin: 1.777rem 0;
+    font-size: 32px;
+    text-align: center;
+  }
+}
