--- a/source/assets/stylesheets/sections/_entries.scss
+++ b/source/assets/stylesheets/sections/_entries.scss
@@ -10,6 +10,7 @@
   .entry-title {
     flex: 1;
     margin: 0;
+    padding: 0 1.777rem;
 
     color: #FFF;
     font-family: $font-family-tertiary;
