--- a/source/assets/stylesheets/sections/_videos.scss
+++ b/source/assets/stylesheets/sections/_videos.scss
@@ -16,7 +16,8 @@
 }
 
 .video-wrapper {
-  .ss-icon {
-    font-size: 32px;
-  }
+  margin-left: 1.333rem;
+  margin-right: 1.333rem;
+
+  .ss-icon { font-size: 32px; }
 }
