--- a/source/layouts/video.erb
+++ b/source/layouts/video.erb
@@ -14,6 +14,24 @@
         <iframe src="http://youtube.com/embed/<%= current_page.data.ytid %>?vq=hd720&amp;showinfo=0&amp;controls=0" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
+    <% if current_page.data.ytid %>
+    <div class="metadata-display js-yt-metadata">
+      <div class="metadata-item entry-views">
+        <span class="ss-icon">&#x1F4FA;</span>
+        <span class="entry-dataitem-detail"><span class="js-yt-views"></span> <span class="metadata-prefix">Views</span></span>
+      </div>
+      <% if current_page.data.series && current_page.data.episode %>
+      <div class="metadata-item entry-episode">
+        <span class="ss-icon">&#x1F3AC;</span>
+        <span class="entry-dataitem-detail"><span class="metadata-prefix"><%= current_page.data.series %></span> #<%= current_page.data.episode %></span>
+      </div>
+      <% end %>
+      <div class="metadata-item entry-likes">
+        <span class="ss-icon">&#x2665;</span>
+        <span class="entry-dataitem-detail"><span class="js-yt-comments"></span> <span class="metadata-prefix">Likes</span></span>
+      </div>
+    </div>
+    <% end %>
 
     <hr>
     <%= yield %>
