Move our YouTube partial over.

--- a/source/layouts/video.erb
+++ b/source/layouts/video.erb
@@ -46,6 +46,7 @@
   </footer>
 </article>
 
+<% if current_page.data.ytid %><%= partial "partials/youtube" %><% end %>
 <%= partial "partials/footer" %>
 <%= partial "partials/juke" %>
 
