--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -47,6 +47,6 @@ title: Welcome
     <% end %>
     </ul>
   </div>
-
+  <%= partial "partials/videohero" %>
   <%= partial "partials/footer" %>
 </main>
