--- a/source/assets/stylesheets/_responsive.scss
+++ b/source/assets/stylesheets/_responsive.scss
@@ -2,7 +2,8 @@
 // While the site strives to be mobile-first, for ease of overriding, some
 // styling is deffered here.
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
-       only screen and (min-resolution: 144dpi) {
+       only screen and (min-resolution: 144dpi),
+       only screen and (max-width: 768px) {
 
   .desktop-only { display: none !important; }
 
@@ -46,18 +47,24 @@
 // Desktop (and low-resolution display) styles and overrides.
 @media only screen and (min-width: 480px) {
 
-  .desktop-only { display: block !important; }
   .mobile-only { display: none !important; }
 
   .header .ss-icon { @include position(relative, 4px 0 0 0); }
-  [role="navigation"] { margin-top: calc(-146px - 1.777rem); }
 
   .recent-title { font-weight: 600 !important; }
   .recent-item { border-bottom: 1px solid #272E37; }
 
+  .hero-posts {
+    align-items: stretch;
+    margin-top: 1.777rem;
+  }
 }
 
 @media only screen and (min-width: 768px) {
+
+  [role="navigation"] { margin-top: calc(-146px - 1.777rem); }
+
+  .desktop-only { display: block !important; }
 
   .jukes,
   .lower-hero,
@@ -70,6 +77,11 @@
     width: 100%; height: 100%;
   }
 
+  .entry-title {
+    margin-left: auto !important;
+    margin-right: auto !important;
+    width: 41.955rem;
+  }
   .entry-content {
     h1, h2, h3, p, ol, ul {
       margin-left: auto;
@@ -77,7 +89,8 @@
       width: 41.955rem;
     }
   }
-  .metadata-display {
+  .metadata-display,
+  .video-list {
     flex-direction: row;
     margin-left: auto !important;
     margin-right: auto !important;
@@ -93,12 +106,28 @@
   .recent-list {
     width: 41.955rem;
   }
+  .hero-posts { align-items: flex-end; }
   .recent-list,
   .video-wrapper {
     margin-left: auto !important;
     margin-right: auto !important;
     width: 41.955rem;
   }
+
+  .video-type {
+    &.twitch {
+      margin-left: 1rem;
+      margin-right: 0;
+    }
+    &.youtube {
+      margin-left: 0;
+      margin-right: 1rem;
+      padding-bottom: 0;
+    }
+  }
+  .video-statistics .ss-icon { top: -1px; }
+  .subscriber-link { top: 0; }
+  .video-link { font-size: 14px; }
 
 }
 
