Fix a bunch of posts, not completely though.

--- a/source/assets/stylesheets/_responsive.scss
+++ b/source/assets/stylesheets/_responsive.scss
@@ -77,7 +77,7 @@
     width: 100%; height: 100%;
   }
 
-  .entry-title {
+  pre, .entry-title {
     margin-left: auto !important;
     margin-right: auto !important;
     width: 41.955rem;
