--- a/source/assets/stylesheets/sections/_entries.scss
+++ b/source/assets/stylesheets/sections/_entries.scss
@@ -51,6 +51,10 @@
     font-size: 1.333rem;
     margin: 1.777em 1.333rem;  // Default, "mobile-first" style for paragraphs.
   }
+  pre {
+    margin: 1.777em 1.333rem;  // Default, "mobile-first" style for paragraphs.
+    overflow: auto;
+  }
 
   li > p {
     margin-top: 0;
