--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -13,7 +13,7 @@
   <meta name="ICBM" content="34.023411,-118.403607">
 
   <link rel="stylesheet" href="//cloud.typography.com/7547452/674522/css/fonts.css">
-  <%= stylesheet_link_tag "normalize", "screen" %>
+  <%= stylesheet_link_tag "normalize", "syntax", "screen" %>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <%= javascript_include_tag  "all" %>
 </head>
