--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -11,15 +11,18 @@
   <meta name="copyright" content="<%= data.site.creator %>">
   <meta name="description" content="<%= data.site.description %>">
   <meta name="ICBM" content="34.023411,-118.403607">
+  <meta name="verify-v1" content="BvvtENncdNqVXB6atrkLVq6ctSy/9OFH9qfIfyK2wZ0=">
+  <meta name="google-site-verification" content="RGOtILy_e7f-Rppoau74G0yzA-pejrlqz2dODnxk8oU">
 
+  <link rel="alternate" type="application/rss+xml" title="Atom" href="http://feeds.feedburner.com/avalonstar"/>
   <link rel="stylesheet" href="//cloud.typography.com/7547452/674522/css/fonts.css">
   <%= stylesheet_link_tag "normalize", "syntax", "screen" %>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <%= javascript_include_tag  "all" %>
   <script type="text/javascript">
-  window.analytics||(window.analytics=[]),window.analytics.methods=["identify","track","trackLink","trackForm","trackClick","trackSubmit","page","pageview","ab","alias","ready","group","on","once","off"],window.analytics.factory=function(t){return function(){var a=Array.prototype.slice.call(arguments);return a.unshift(t),window.analytics.push(a),window.analytics}};for(var i=0;i<window.analytics.methods.length;i++){var method=window.analytics.methods[i];window.analytics[method]=window.analytics.factory(method)}window.analytics.load=function(t){var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=("https:"===document.location.protocol?"https://":"http://")+"d2dq2ahtl5zl1z.cloudfront.net/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n)},window.analytics.SNIPPET_VERSION="2.0.8",
-  window.analytics.load("q0rg3dbt2g");
-  window.analytics.page();
+    window.analytics||(window.analytics=[]),window.analytics.methods=["identify","track","trackLink","trackForm","trackClick","trackSubmit","page","pageview","ab","alias","ready","group","on","once","off"],window.analytics.factory=function(t){return function(){var a=Array.prototype.slice.call(arguments);return a.unshift(t),window.analytics.push(a),window.analytics}};for(var i=0;i<window.analytics.methods.length;i++){var method=window.analytics.methods[i];window.analytics[method]=window.analytics.factory(method)}window.analytics.load=function(t){var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=("https:"===document.location.protocol?"https://":"http://")+"d2dq2ahtl5zl1z.cloudfront.net/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n)},window.analytics.SNIPPET_VERSION="2.0.8",
+    window.analytics.load("q0rg3dbt2g");
+    window.analytics.page();
   </script>
 </head>
 <body class="<%= page_classes %>">
