--- a/source/layouts/prose.erb
+++ b/source/layouts/prose.erb
@@ -4,7 +4,7 @@
   <header class="entry-header">
     <div class="entry-wrapper wrapper">
       <h1 class="entry-title"><%= current_page.title %></h1>
-      <span class="entry-category"><%= current_page.data.category %></span>
+      <span class="entry-category"><%= current_page.data.category %>, by <a href="https://twitter.com/bryanveloso" rel="author">Bryan Veloso</a></span>
       <a class="scroll-target" href="#top"><span class="ss-icon ss-navigatedown"></span></a>
     </div>
   </header>
