Add datetime attributes to the <time> tags.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -16,13 +16,13 @@ title: Welcome
         <% prose = blog.articles.select{ |a| a.data.category.include?("prose") }.shift %>
         <span class="ss-icon">&#x1F4D3;</span>
         <h2 class="recent-title"><a href="<%= prose.url %>"><%= prose.title %></a></h2>
-        <time class="recent-published"><%= prose.date.strftime("%B %-d, %Y") %></time>
+        <time pubdate datetime="<%= prose.date.strftime("%F") %>" class="recent-published"><%= prose.date.strftime("%B %-d, %Y") %></time>
       </div>
       <div class="recent-item recent-video">
         <% video = blog.articles.select{ |a| a.data.category.include?("video") }.shift %>
         <span class="ss-icon">&#x1F3AC;</span>
         <h2 class="recent-title"><a href="<%= video.url %>"><%= video.title %></a></h2>
-        <time class="recent-published"><%= video.date.strftime("%B %-d, %Y") %></time>
+        <time pubdate datetime="<%= video.date.strftime("%F") %>" class="recent-published"><%= video.date.strftime("%B %-d, %Y") %></time>
       </div>
     </div>
     <a class="scroll-target" href="#top"><span class="ss-icon ss-navigatedown"></span></a>
@@ -39,7 +39,7 @@ title: Welcome
       <li class="recent-list-item recent-<%= article.data.category %>">
         <div>
           <h2 class="recent-title"><a href="<%= article.url %>"><%= article.title %></a></h2>
-          <time class="recent-published"><%= article.data.category %> &middot; <%= article.date.strftime("%B %-d, %Y") %></time>
+          <time pubdate datetime="<%= prose.date.strftime("%F") %>" class="recent-published"><%= article.data.category %> &middot; <%= article.date.strftime("%B %-d, %Y") %></time>
         </div>
         <% if article.data.category == "prose" %><span class="ss-icon">&#x1F4D3;</span><% end %>
         <% if article.data.category == "video" %><span class="ss-icon">&#x1F3AC;</span><% end %>
