--- a/source/assets/stylesheets/_responsive.scss
+++ b/source/assets/stylesheets/_responsive.scss
@@ -88,6 +88,11 @@
       margin-right: auto;
       width: 41.955rem;
     }
+    img {
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 41.955rem;
+    }
   }
   .metadata-display,
   .video-list {
