--- a/source/assets/stylesheets/_responsive.scss
+++ b/source/assets/stylesheets/_responsive.scss
@@ -88,10 +88,13 @@
       margin-right: auto;
       width: 41.955rem;
     }
-    img {
+    img, .gist {
       margin-left: auto;
       margin-right: auto;
       max-width: 41.955rem;
+    }
+    .gist pre {
+      width: 100%;
     }
   }
   .metadata-display,
