Moar moar posts assets.

--- a/source/assets/stylesheets/_responsive.scss
+++ b/source/assets/stylesheets/_responsive.scss
@@ -83,7 +83,7 @@
     width: 41.955rem;
   }
   .entry-content {
-    h1, h2, h3, p, ol, ul {
+    h1, h2, h3, p, ol, table, ul {
       margin-left: auto;
       margin-right: auto;
       width: 41.955rem;
