--- a/source/assets/stylesheets/sections/_entries.scss
+++ b/source/assets/stylesheets/sections/_entries.scss
@@ -59,6 +59,9 @@
     margin: 1.777em 1.333rem;  // Default, "mobile-first" style for paragraphs.
     overflow: auto;
   }
+  table {
+    margin: 1.777em 1.333rem;
+  }
 
   li > p {
     margin-top: 0;
