We're using Middleman. Say it.

--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -22,6 +22,6 @@
   </ul>
   -->
   <div class="copyright">
-    <p><strong>&copy; 2000-2013.</strong> Powered by <a href="https://github.com/jekyll/jekyll">Jekyll</a> and <a href="http://heroku.com">Heroku</a>. <a href="https://github.com/bryanveloso/avalonstar">Get the source</a>.</p>
+    <p><strong>&copy; 2000-2013.</strong> Powered by <a href="http://middlemanapp.com">Middleman</a> and <a href="http://heroku.com">Heroku</a>. <a href="https://github.com/bryanveloso/avalonstar">Get the source</a>.</p>
   </div>
 </footer>
