--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,7 +14,10 @@
   <meta name="verify-v1" content="BvvtENncdNqVXB6atrkLVq6ctSy/9OFH9qfIfyK2wZ0=">
   <meta name="google-site-verification" content="RGOtILy_e7f-Rppoau74G0yzA-pejrlqz2dODnxk8oU">
 
-  <link rel="alternate" type="application/rss+xml" title="Atom" href="http://feeds.feedburner.com/avalonstar"/>
+  <link rel="alternate" type="application/rss+xml" title="Atom" href="http://feeds.feedburner.com/avalonstar">
+  <link rel="shortcut icon" href="favicon.png">
+  <link rel="icon" type="image/ico" href="favicon.ico">
+
   <link rel="stylesheet" href="//cloud.typography.com/7547452/674522/css/fonts.css">
   <%= stylesheet_link_tag "normalize", "syntax", "screen" %>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
