--- a/source/layouts/prose.erb
+++ b/source/layouts/prose.erb
@@ -5,7 +5,7 @@
     <div class="entry-wrapper wrapper">
       <h1 class="entry-title"><%= current_page.title %></h1>
       <span class="entry-category"><%= current_page.data.category %>, by <a href="https://twitter.com/bryanveloso" rel="author">Bryan Veloso</a></span>
-      <a class="scroll-target" href="#top"><span class="ss-icon ss-navigatedown"></span></a>
+      <a class="scroll-target" href="#top"><span class="ss-icon ss-air ss-navigatedown"></span></a>
     </div>
   </header>
   <div id="top" class="entry-content">
@@ -13,7 +13,7 @@
   </div>
   <footer class="entry-footer metadata-display">
     <div class="entry-dataitem metadata-item">
-      <span class="ss-icon">&#x1F4C5;</span>
+      <span class="ss-icon ss-air">&#x1F4C5;</span>
       <time pubdate datetime="<%= current_page.date.strftime("%F") %>" class="entry-dataitem-detail">
         <span class="metadata-prefix">Published</span> <%= current_page.date.strftime("%B %-d, %Y") %>
       </time>
