--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -11,16 +11,7 @@
       <p>From design portfolio, to award-winning blog, to personal playground, Avalonstar is the long-running journal and online moniker of designer and developer, Bryan Veloso.</p>
     </div>
   </div>
-  <!--
-  <ul class="social">
-    <li class="facebook"><a href="https://facebook.com/bryanveloso">Facebook</a></li>
-    <li class="twitter"><a href="https://twitter.com/bryanveloso">Twitter</a></li>
-    <li class="twitch"><a href="http://twitch.tv/vlogalonstar">Twitch</a></li>
-    <li class="youtube"><a href="http://youtube.com/bryanveloso">YouTube</a></li>
-    <li class="vimeo"><a href="http://vimeo.com/bryanveloso">Vimeo</a></li>
-    <li class="github"><a href="http://github.com/bryanveloso">GitHub</a></li>
-  </ul>
-  -->
+  <%= partial "partials/social" %>
   <div class="copyright">
     <p><strong>&copy; 2000-2013.</strong> Powered by <a href="http://middlemanapp.com">Middleman</a> and <a href="http://heroku.com">Heroku</a>. <a href="https://github.com/bryanveloso/avalonstar">Get the source</a>.</p>
   </div>
