--- a/source/partials/_videohero.erb
+++ b/source/partials/_videohero.erb
@@ -1,6 +1,6 @@
 <div class="home-videos home-section">
   <header class="home-section-header">
-    <span class="ss-icon">&#x1F4F9;</span>
+    <span class="ss-icon ss-air">&#x1F4F9;</span>
   </header>
   <div class="video-list">
     <div class="video-type youtube">
