--- a/source/assets/stylesheets/partials/_footer.scss
+++ b/source/assets/stylesheets/partials/_footer.scss
@@ -85,3 +85,27 @@
     font-size: 32px;
   }
 }
+
+.social {
+  display: flex;
+  margin: 1.333rem;
+  padding-left: 0;
+  justify-content: space-around;
+  list-style: none;
+
+  a { text-decoration: none; }
+  li { text-align: center; }
+  .ss-icon { font-size: 16px; }
+  .service-name { display: none; }
+}
+
+$brands: facebook, github, google, twitter, vimeo, youtube;
+$colors: #3b5998, #171515, #dd4b39, #00acee, #44bbff, #c4302b;
+
+@each $service in zip($brands, $colors) {
+  a.#{nth($service, 1)} {
+    color: nth($service, 2);
+    transition: all 250ms ease;
+  }
+  a.#{nth($service, 1)}:hover { color: nth($service, 2); }
+}
