--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -32,7 +32,7 @@ title: Welcome
 <main id="content" role="main">
   <div id="top" class="recent-posts home-section">
     <header class="home-section-header">
-      <span class="ss-icon ss-clock"></span>
+      <span class="ss-icon ss-air ss-clock"></span>
     </header>
     <ul class="recent-list">
     <% blog.articles[0...10].each do |article| %>
