--- a/source/layouts/prose.erb
+++ b/source/layouts/prose.erb
@@ -1,20 +1,24 @@
 <% wrap_layout :layout do %>
 
-<article class="entry hentry prose">
+<article class="entry hentry prose" itemscope itemtype="http://schema.org/BlogPosting">
+  <meta content="<%= current_page.url %>" itemprop="url">
   <header class="entry-header">
     <div class="entry-wrapper wrapper">
-      <h1 class="entry-title"><%= current_page.title %></h1>
-      <span class="entry-category"><%= current_page.data.category %>, by <a href="https://twitter.com/bryanveloso" rel="author">Bryan Veloso</a></span>
+      <h1 class="entry-title" itemprop="headline"><%= current_page.title %></h1>
+      <span class="entry-category">
+        <span itemprop="articleSection"><%= current_page.data.category %></span>, by
+        <a href="https://twitter.com/bryanveloso" rel="author" itemprop="creator">Bryan Veloso</a>
+      </span>
       <a class="scroll-target" href="#top"><span class="ss-icon ss-air ss-navigatedown"></span></a>
     </div>
   </header>
-  <div id="top" class="entry-content">
+  <div id="top" class="entry-content" itemprop="articleBody">
     <%= yield %>
   </div>
   <footer class="entry-footer metadata-display">
     <div class="entry-dataitem metadata-item">
       <span class="ss-icon ss-air">&#x1F4C5;</span>
-      <time pubdate datetime="<%= current_page.date.strftime("%F") %>" class="entry-dataitem-detail">
+      <time pubdate datetime="<%= current_page.date.strftime("%F") %>" class="entry-dataitem-detail" itemprop="datePublished">
         <span class="metadata-prefix">Published</span> <%= current_page.date.strftime("%B %-d, %Y") %>
       </time>
     </div>
